update lazy effect

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nill Mishra | Portfolio</title>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="src/assets/black-logo.png" />
   </head>
   <body>
     <div id="root"></div>
